--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,11 @@ Description: Supply functions for the creation and handling of missing data
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Suggests: 
     lpSolve,
     testthat (>= 2.1.0)
 Imports: 
     stats
+URL: https://github.com/torockel/missMethods
+BugReports: https://github.com/torockel/missMethods/issues
