--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(delete_MNAR_1_to_x)
 export(delete_MNAR_censoring)
 export(delete_MNAR_one_group)
 export(delete_MNAR_rank)
+export(evaluate_imputation_parameters)
 export(evaluate_imputed_values)
 export(evaluate_parameters)
 export(impute_mean)
