--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ LazyData: true
 RoxygenNote: 7.1.0
 Suggests: 
     lpSolve,
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    tibble
 Imports: 
     stats
 URL: https://github.com/torockel/missMethods
