--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
 Package: missMethods
 Title: Methods for Missing Data
 Version: 0.0.1.9000
-Authors@R: c(
-    person(given = "Tobias",
+Authors@R: person(given = "Tobias",
            family = "Rockel",
            role = c("aut", "cre"),
            email = "Rockel.To@gmail.com")
-    )
 Description: Supply functions for the creation and handling of missing data 
     as well as tools to evaluate missing data methods.
 License: GPL-3
