--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,14 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
 Suggests: 
+    ggplot2,
+    knitr,
     lpSolve,
+    rmarkdown,
     testthat (>= 2.1.0),
-    tibble
+    tibble,
 Imports: 
     stats
 URL: https://github.com/torockel/missMethods
 BugReports: https://github.com/torockel/missMethods/issues
+VignetteBuilder: knitr
