--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(delete_MNAR_rank)
 export(evaluate_imputation_parameters)
 export(evaluate_imputed_values)
 export(evaluate_parameters)
+export(impute_in_classes)
 export(impute_mean)
 export(impute_median)
 export(impute_mode)
