Add impute_LS_gene() (first draft)
- imputation results equals original from Bo et al. (2004)
- function is very slow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(evaluate_imputation_parameters)
 export(evaluate_imputed_values)
 export(evaluate_parameters)
 export(impute_EM)
+export(impute_LS_gene)
 export(impute_hot_deck_in_classes)
 export(impute_in_classes)
 export(impute_mean)
