--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(evaluate_imputed_values)
 export(evaluate_parameters)
 export(impute_EM)
 export(impute_LS_array)
+export(impute_LS_combined)
 export(impute_LS_gene)
 export(impute_hot_deck_in_classes)
 export(impute_in_classes)
