Export impute_expected_values()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(impute_LS_adaptive)
 export(impute_LS_array)
 export(impute_LS_combined)
 export(impute_LS_gene)
+export(impute_expected_values)
 export(impute_hot_deck_in_classes)
 export(impute_in_classes)
 export(impute_mean)
