--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,25 @@
 Package: missMethods
 Title: Methods for Missing Data
 Version: 0.1.0.9000
-Authors@R: person(given = "Tobias",
+Authors@R: 
+    person(given = "Tobias",
            family = "Rockel",
            role = c("aut", "cre"),
            email = "Rockel.To@gmail.com")
-Description: Supply functions for the creation and handling of missing data 
-    as well as tools to evaluate missing data methods. Nearly all possibilities
-    of generating missing data discussed by Santos et. al (2019) 
-    <doi:10.1109/ACCESS.2019.2891360> and some additional are implemented. 
-    Functions are supplied to compare parameter estimates and imputed values to 
-    true values to evaluate missing data methods. Evaluations of these types 
-    are done, for example, by Cetin-Berber et al. (2019) 
-    <doi:10.1177/0013164418805532>  and Kim et al. (2005) 
+Description: Supply functions for the creation and handling of
+    missing data as well as tools to evaluate missing data methods. Nearly
+    all possibilities of generating missing data discussed by Santos et.
+    al (2019) <doi:10.1109/ACCESS.2019.2891360> and some additional are
+    implemented.  Functions are supplied to compare parameter estimates
+    and imputed values to true values to evaluate missing data methods.
+    Evaluations of these types are done, for example, by Cetin-Berber et
+    al. (2019) <doi:10.1177/0013164418805532> and Kim et al. (2005)
     <doi:10.1093/bioinformatics/bth499>.
 License: GPL-3
-Encoding: UTF-8
-LazyData: true
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+URL: https://github.com/torockel/missMethods
+BugReports: https://github.com/torockel/missMethods/issues
+Imports: 
+    stats
 Suggests: 
     ggplot2,
     knitr,
@@ -28,8 +29,9 @@ Suggests:
     rmarkdown,
     testthat (>= 2.1.0),
     tibble
-Imports: 
-    stats
-URL: https://github.com/torockel/missMethods
-BugReports: https://github.com/torockel/missMethods/issues
-VignetteBuilder: knitr
+VignetteBuilder: 
+    knitr
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
