--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Authors@R:
            email = "Rockel.To@gmail.com")
 Description: Supply functions for the creation and handling of
     missing data as well as tools to evaluate missing data methods. Nearly
-    all possibilities of generating missing data discussed by Santos et.
-    al (2019) <doi:10.1109/ACCESS.2019.2891360> and some additional are
+    all possibilities of generating missing data discussed by Santos et
+    al. (2019) <doi:10.1109/ACCESS.2019.2891360> and some additional are
     implemented.  Functions are supplied to compare parameter estimates
     and imputed values to true values to evaluate missing data methods.
     Evaluations of these types are done, for example, by Cetin-Berber et
