--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(evaluate_imputation_parameters)
 export(evaluate_imputed_values)
 export(evaluate_parameters)
 export(impute_EM)
+export(impute_GMC)
 export(impute_LS_adaptive)
 export(impute_LS_array)
 export(impute_LS_combined)
