--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,4 +26,5 @@ export(impute_mean)
 export(impute_median)
 export(impute_mode)
 export(impute_sRHD)
+export(simulate_data)
 importFrom(stats,median)
