Remove EMCluster and use GMCM instead

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,8 @@ BugReports: https://github.com/torockel/missMethods/issues
 Imports: 
     stats
 Suggests: 
-    EMCluster,
     ggplot2,
+    GMCM,
     knitr,
     lpSolve,
     mvtnorm,
